Fix cursor flickering on Chrome

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,11 @@
   --btn--icon-only-size: 36px;
 }
 
+/* For chrome */
+a:-webkit-any-link {
+  cursor: url("/images/cursors/SVG/Color_InteractCursor.svg") 8 8, pointer;
+}
+
 html, body {
   display: flex;
   height: 100vh;
